handle case for file://